add data source versions
